--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -19,4 +19,6 @@ jobs:
       - name: Run Cypress tests
         uses: cypress-io/github-action@v4
         with:
-          start: npm start || echo "no start script"
+          # No start script required for these example tests; remove or change
+          # this block if you need to start a local dev server before tests.
+          record: false
